--- a/src/dev_tools/Makefile
+++ b/src/dev_tools/Makefile
@@ -11,44 +11,30 @@ CXXFLAGS   =	-std=c++11\
 DEUBG_CXX  =	${CXXFLAGS} -g
 RELEASE_CXX=	${CXXFLAGS}
 
-source_cpp =	common/files/file_reader.cpp \
-		   		common/files/file_writer.cpp \
-		   		common/files/gzstream.cpp \
-				common/log/log.cpp\
-				common/log/logfilter.cpp\
-				common/time/timetools.cpp\
-				common/string/stringtools.cpp\
-		   		biocommon/sam_bam/sam_parser.cpp\
-		   		biocommon/pair/pair_sam_parser.cpp\
-				stLFR/barcodeId.cpp\
-				stLFR/readName2Barcode.cpp\
-				stLFR/barcodeOnContig.cpp\
-				stLFR/ContigCluster.cpp\
-				stLFR/LineGroup.cpp\
-				stLFR/CBB.cpp\
-				common/args/argsparser.cpp\
-				soap2/loadGraph.cpp\
-				soap2/contigGraph.cpp\
-				soap2/contigFasta.cpp\
-				soap2/contigType.cpp\
-
-test_cpp   =	test/test.cpp\
-				algorithm/graph/SPFSearch_test.cpp\
-				algorithm/graph/GraphTest.cpp\
-				algorithm/bi_list/bi_list_test.cpp\
-				algorithm/fibheap/fib_heap_test.cpp\
-				algorithm/collection/collection_test.cpp\
-				algorithm/incr_array/incr_array_test.cpp\
-				common/time/timetools_test.cpp\
-				common/string/stringtools_test.cpp\
-				common/args/argsparser_test.cpp\
-				biocommon/sam_bam/sam_parser_test.cpp\
+source_cpp =	../common/files/file_reader.cpp \
+		   		../common/files/file_writer.cpp \
+		   		../common/files/gzstream.cpp \
+				../common/log/log.cpp\
+				../common/log/logfilter.cpp\
+				../common/time/timetools.cpp\
+				../common/string/stringtools.cpp\
+		   		../biocommon/sam_bam/sam_parser.cpp\
+		   		../biocommon/pair/pair_sam_parser.cpp\
+				../stLFR/barcodeId.cpp\
+				../stLFR/readName2Barcode.cpp\
+				../stLFR/barcodeOnContig.cpp\
+				../stLFR/ContigCluster.cpp\
+				../stLFR/LineGroup.cpp\
+				../stLFR/CBB.cpp\
+				../common/args/argsparser.cpp\
+				../soap2/loadGraph.cpp\
+				../soap2/contigGraph.cpp\
+				../soap2/contigFasta.cpp\
+				../soap2/contigType.cpp\
+				contig_barcode.cpp
 
 
 source_o		= ${source_cpp:%.cpp=%.o}
-
-ChopBin_cpp 			=	main/ChopBin.cpp
-ChopBin_o   =	${ChopBin_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 BarcodeOnContig_cpp =	BarcodeOnContig.cpp
 BarcodeOnContig_o   =	${BarcodeOnContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
@@ -59,17 +45,11 @@ BarcodeOnBin_o   =	${BarcodeOnBin_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 FormatBarcodeOnRef_cpp =	FormatBarcodeOnRef.cpp
 FormatBarcodeOnRef_o   =	${FormatBarcodeOnRef_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-BinCluster_cpp =	BinCluster.cpp
-BinCluster_o   =	${BinCluster_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
 ContigTypeByRef_cpp =	ContigTypeByRef.cpp
 ContigTypeByRef_o   =	${ContigTypeByRef_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 ContigGraphType_cpp =	ContigGraphType.cpp
 ContigGraphType_o   =	${ContigGraphType_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
-StaticsticUnique_cpp =	StaticsticUnique.cpp
-StaticsticUnique_o   =	${StaticsticUnique_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 UnicomGraph_cpp =	UnicomGraph.cpp
 UnicomGraph_o   =	${UnicomGraph_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
@@ -83,32 +63,17 @@ job_12_o   =	${job_12_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 LinearClusterResult_cpp =	LinearClusterResult.cpp
 LinearClusterResult_o   =	${LinearClusterResult_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-
-Sam2ReadInContig_cpp 	= Sam2ReadInContig.cpp
-Sam2ReadInContig_o 	 	= ${Sam2ReadInContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
 MergeClusterResult_cpp	= MergeClusterResult.cpp
 MergeClusterResult_o 	= ${MergeClusterResult_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o} 
-
-SuperContig_cpp 		= SuperContig.cpp
-SuperContig_o			= ${SuperContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 LinkCheck_cpp			= LinkCheck.cpp
 LinkCheck_o				= ${LinkCheck_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-
 LinkCheck_1_cpp			= LinkCheck_1.cpp
 LinkCheck_1_o			= ${LinkCheck_1_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-
-FillContigRoad_cpp		= FillContigRoad.cpp
-FillContigRoad_o 		= ${FillContigRoad_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
 ContigRoadFill2Fasta_cpp= ContigRoadFill2Fasta.cpp
 ContigRoadFill2Fasta_o	= ${ContigRoadFill2Fasta_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
-MergeContig_cpp			= MergeContig.cpp
-MergeContig_o			= ${MergeContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 SolveMulti_cpp			= SolveMulti.cpp
 SolveMulti_o			= ${SolveMulti_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
@@ -116,35 +81,24 @@ SolveMulti_o			= ${SolveMulti_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 ClusterLengthSim_cpp 	= ClusterLengthSim.cpp
 ClusterLengthSim_o		= ${ClusterLengthSim_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-LinearCDG_cpp 			= LinearCDG.cpp
-LinearCDG_o				= ${LinearCDG_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
-test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
-
 
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs 	   =	BarcodeOnContig ChopBin FormatBarcodeOnRef BarcodeOnBin BinCluster \
-				ContigTypeByRef ContigGraphType StaticsticUnique  UnicomGraph \
-				ClusterGap job12 LinearClusterResult Sam2ReadInContig MergeClusterResult \
-				SuperContig LinkCheck LinkCheck_1 FillContigRoad ContigRoadFill2Fasta \
-				MergeContig SolveMulti ClusterLengthSim LinearCDG
-jobs_o 	   =	${BarcodeOnContig_o} ${ChopBin_o}  ${BarcodeOnBin_o} ${FormatBarcodeOnRef_o} \
-				${BinCluster_o} ${ContigTypeByRef_o}\
-				${ContigGraphType_o}  ${StaticsticUnique_o}  ${UnicomGraph_o} \
-				${ClusterGap_o} ${job_12_o} ${LinearClusterResult_o} ${Sam2ReadInContig_o} \
-				${MergeClusterResult_o} ${SuperContig_o} ${LinkCheck_o} \
-				${FillContigRoad_o} ${ContigRoadFill2Fasta_o} ${LinkCheck_1_o} \
-				${MergeContig_o} ${SolveMulti_o} ${ClusterLengthSim_o} \
-				${LinearCDG_o}
+jobs 	   =	BarcodeOnContig FormatBarcodeOnRef BarcodeOnBin \
+				ContigTypeByRef ContigGraphType UnicomGraph \
+				ClusterGap job12 LinearClusterResult MergeClusterResult \
+				LinkCheck LinkCheck_1 ContigRoadFill2Fasta \
+				SolveMulti ClusterLengthSim 
+jobs_o 	   =	${BarcodeOnContig_o}  ${BarcodeOnBin_o} ${FormatBarcodeOnRef_o} \
+				${ContigTypeByRef_o}\
+				${ContigGraphType_o}   ${UnicomGraph_o} \
+				${ClusterGap_o} ${job_12_o} ${LinearClusterResult_o}\
+				${MergeClusterResult_o} ${LinkCheck_o} \
+				${ContigRoadFill2Fasta_o} ${LinkCheck_1_o} \
+				${SolveMulti_o} ${ClusterLengthSim_o} \
 
-all : test ${jobs}
-
-
-
-ChopBin : clean ${ChopBin_o}
-	${CXX} ${DEUBG_CXX} ${ChopBin_o} -o ChopBin
+all : ${jobs}
 
 
 BarcodeOnContig : clean ${BarcodeOnContig_o}
@@ -156,17 +110,11 @@ FormatBarcodeOnRef : clean ${FormatBarcodeOnRef_o}
 BarcodeOnBin : clean ${BarcodeOnBin_o}
 	${CXX} ${DEUBG_CXX} ${BarcodeOnBin_o} -o BarcodeOnBin
 
-BinCluster : clean ${BinCluster_o}
-	${CXX} ${DEUBG_CXX} ${BinCluster_o} -o BinCluster
-
 ContigTypeByRef : clean ${ContigTypeByRef_o}
 	${CXX} ${DEUBG_CXX} ${ContigTypeByRef_o} -o ContigTypeByRef
 
 ContigGraphType : clean ${ContigGraphType_o}
 	${CXX} ${DEUBG_CXX} ${ContigGraphType_o} -o ContigGraphType
-
-StaticsticUnique : clean ${StaticsticUnique_o}
-	${CXX} ${DEUBG_CXX} ${StaticsticUnique_o} -o StaticsticUnique
 
 UnicomGraph : clean ${UnicomGraph_o}
 	${CXX} ${DEUBG_CXX} ${UnicomGraph_o} -o UnicomGraph
@@ -180,14 +128,9 @@ job12 : clean ${job_12_o}
 LinearClusterResult : clean ${LinearClusterResult_o}
 	${CXX} ${DEUBG_CXX} ${LinearClusterResult_o} -o LinearClusterResult
 
-Sam2ReadInContig: clean ${Sam2ReadInContig_o}
-	${CXX} ${DEUBG_CXX} ${Sam2ReadInContig_o} -o Sam2ReadInContig 
-
 MergeClusterResult : clean ${MergeClusterResult_o}
 	${CXX} ${DEUBG_CXX} ${MergeClusterResult_o} -o MergeClusterResult
 
-SuperContig: clean ${SuperContig_o}
-	${CXX} ${DEUBG_CXX} ${SuperContig_o} -o SuperContig
 
 LinkCheck: clean ${LinkCheck_o}
 	${CXX} ${DEUBG_CXX} ${LinkCheck_o} -o LinkCheck
@@ -195,14 +138,9 @@ LinkCheck: clean ${LinkCheck_o}
 LinkCheck_1: clean ${LinkCheck_1_o}
 	${CXX} ${DEUBG_CXX} ${LinkCheck_1_o} -o LinkCheck_1
 
-FillContigRoad: clean ${FillContigRoad_o}
-	${CXX} ${DEUBG_CXX} ${FillContigRoad_o} -o FillContigRoad 
 
 ContigRoadFill2Fasta : clean  ${ContigRoadFill2Fasta_o}
 	${CXX} ${DEUBG_CXX} ${ContigRoadFill2Fasta_o} -o ContigRoadFill2Fasta
-
-MergeContig : clean ${MergeContig_o}
-	${CXX} ${DEUBG_CXX} ${MergeContig_o} -o MergeContig
 
 SolveMulti : clean ${SolveMulti_o}
 	${CXX} ${DEUBG_CXX} ${SolveMulti_o} -o SolveMulti
@@ -210,14 +148,7 @@ SolveMulti : clean ${SolveMulti_o}
 ClusterLengthSim : clean ${ClusterLengthSim_o}
 	${CXX} ${DEUBG_CXX} ${ClusterLengthSim_o} -o ClusterLengthSim
 
-LinearCDG: clean ${LinearCDG_o}
-	${CXX} ${DEUBG_CXX} ${LinearCDG_o} -o LinearCDG 
-
-test: clean ${test_o} ${source_h}
-	${CXX} ${DEUBG_CXX} ${test_o} -o test
-
-
-dirty	   =	${test_o} ${jobs_o} ${jobs}  test
+dirty	   =${jobs_o} ${jobs}
 
 clean:
 	rm -rf ${dirty}
