save after PEGraph

--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -60,6 +60,9 @@ LinearCDG_o				= ${LinearCDG_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 MinTree_cpp 			= MinTree.cpp
 MinTree_o				= ${MinTree_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
+PEGraph_cpp 			= PEGraph.cpp
+PEGraph_o				= ${PEGraph_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
@@ -71,7 +74,8 @@ jobs 	   =	ChopBin\
 				FillContigRoad \
 				MergeContig\
 				LinearCDG\
-				MinTree
+				MinTree\
+				PEGraph\
 
 jobs_o 	   =	${ChopBin_o} \
 				${BinCluster_o} \
@@ -81,7 +85,8 @@ jobs_o 	   =	${ChopBin_o} \
 				${FillContigRoad_o}\
 				${MergeContig_o}\
 				${LinearCDG_o} \
-				${MinTree_o}
+				${MinTree_o}\
+				${PEGraph_o}
 
 all : ${jobs}
 
@@ -110,8 +115,12 @@ MergeContig : clean ${MergeContig_o}
 
 LinearCDG: clean ${LinearCDG_o}
 	${CXX} ${DEUBG_CXX} ${LinearCDG_o} -o LinearCDG 
+
 MinTree: clean ${MinTree_o}
 	${CXX} ${DEUBG_CXX} ${MinTree_o} -o MinTree 
+
+PEGraph: clean ${PEGraph_o}
+	${CXX} ${DEUBG_CXX} ${PEGraph_o} -o PEGraph 
 
 dirty	   =${jobs_o} ${jobs}  
 
