--- a/src/tools/Makefile
+++ b/src/tools/Makefile
@@ -41,6 +41,11 @@ cpSpeed_o   =	${cpSpeed_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 bin_ref_cpp 	=	bin_ref.cpp
 bin_ref_o   =	${bin_ref_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
+
+BinFreq_cpp 	=	BinFreq.cpp
+BinFreq_o   =	${BinFreq_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 trunk_mark_cpp 	=	trunk_mark.cpp
 trunk_mark_o   =	${trunk_mark_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
@@ -56,11 +61,13 @@ gap_cluster_check_o   =	${gap_cluster_check_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.
 jobs 	   =	stLFR_2_10X cpSpeed trunk_mark\
 				gap_cluster_check\
 				bin_ref\
+				BinFreq\
 				seedGapFreq
 
 jobs_o 	   =	${stLFR_2_10X_o} ${cpSpeed_o}\
 				${gap_cluster_check_o}\
 				${bin_ref_o}\
+				${BinFreq_o}\
 				${seedGapFreq_o}
 
 all : ${jobs}
@@ -70,6 +77,10 @@ gap_cluster_check : clean ${gap_cluster_check_o}
 
 seedGapFreq : clean ${seedGapFreq_o}
 	${CXX} ${DEUBG_CXX} ${seedGapFreq_o} -o seedGapFreq
+
+
+BinFreq : clean ${BinFreq_o}
+	${CXX} ${DEUBG_CXX} ${BinFreq_o} -o BinFreq
 
 bin_ref : clean ${bin_ref_o}
 	${CXX} ${DEUBG_CXX} ${bin_ref_o} -o bin_ref
