--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -21,6 +21,7 @@ source_cpp =	../common/files/file_reader.cpp \
 		   		../biocommon/sam_bam/sam_parser.cpp\
 		   		../biocommon/pair/pair_sam_parser.cpp\
 				../biocommon/fasta/fasta.cpp\
+				../biocommon/seq/seq.cpp\
 				../stLFR/barcodeId.cpp\
 				../stLFR/readName2Barcode.cpp\
 				../stLFR/barcodeOnContig.cpp\
@@ -34,6 +35,7 @@ source_cpp =	../common/files/file_reader.cpp \
 
 test_cpp   =	test.cpp\
 				../biocommon/fasta/fasta_test.cpp\
+				../biocommon/seq/seq_test.cpp\
 				../algorithm/interval/Interval_test.cpp\
 				../algorithm/distribution/distribution_test.cpp\
 				../algorithm/linear_fitting/Minimum_multiplication_test.cpp\
