--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -47,8 +47,8 @@ SplitInfo_o   =	${SplitInfo_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 ParseReadName_cpp 	=	ParseReadName.cpp
 ParseReadName_o   =	${ParseReadName_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-ParseReadName_cpp 	=	ParseReadName.cpp
-ParseReadName_o   =	${ParseReadName_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+ParseRead2Contig_cpp 	=	ParseRead2Contig.cpp
+ParseRead2Contig_o   =	${ParseRead2Contig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 ChopBin_cpp 	=	ChopBin.cpp
 ChopBin_o   =	${ChopBin_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
@@ -104,6 +104,7 @@ FCRFByTF_o				= ${FCRFByTF_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 jobs 	   =	ChopBin\
 				ParseReadName\
+				ParseRead2Contig\
 				SplitInfo\
 				SplitContig\
 				BinCluster \
@@ -124,6 +125,7 @@ jobs 	   =	ChopBin\
 
 jobs_o 	   =	${ChopBin_o} \
 				${ParseReadName_o}\
+				${ParseRead2Contig_o}\
 				${SplitInfo_o}\
 				${SplitContig_o}\
 				${BinCluster_o} \
@@ -153,6 +155,9 @@ SplitInfo : clean ${SplitInfo_o}
 
 ChopBin : clean ${ChopBin_o}
 	${CXX} ${DEUBG_CXX} ${ChopBin_o} -o ChopBin
+
+ParseRead2Contig : clean ${ParseRead2Contig_o}
+	${CXX} ${DEUBG_CXX} ${ParseRead2Contig_o} -o ParseRead2Contig
 
 ParseReadName : clean ${ParseReadName_o}
 	${CXX} ${DEUBG_CXX} ${ParseReadName_o} -o ParseReadName
