--- a/scripts/LRIAGCA/conf.ini
+++ b/scripts/LRIAGCA/conf.ini
@@ -23,7 +23,16 @@ SOAP_DIR="./"
 # Detail settings 
 #
 
-BIN_DIR="../src/main"
+EXEC_DIR="../src/main"
 DATA="./"
-bin_size=300
+BIN_SIZE=300
+TAIL_DEL=35
+SOAP_K=63
+CLUSTER=0.05
+SEARCH_DEPTH=300
+LEN_FACTOR=0.7
+SIM_FACTOR=0.7
+
+
+
 
