--- a/scripts/LRIAGCA/conf.ini
+++ b/scripts/LRIAGCA/conf.ini
@@ -2,32 +2,38 @@
 # Project Settings.
 #
 
-PREFIX="test"
+PROJECT_NAME="pipetest"
+R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
+R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
 THREADS=8
-PROJECT_NAME="test"
-R1="r1"
-R2="r2"
+
 #
-# SOAPdenovo directory .
-#   should at least contain :
+# SOAPdenovo settings 
+#   directory should at least contain :
 #                   1. xxx.contig
 #                   2. xxx.updated.edge
 #                   3. xxx.Arc
 #                   4. xxx.ContigIndex
 #
 
-SOAP_DIR="./"
+SOAP_DIR="/home/guolidong/stLFR/new_chr19/chr19/standard_soap2_k48_09_03_11_35_24"
+SOAP_K=63
+PREFIX="chr19_soap2"
 
+
+#
+# Toos settings 
+#
+
+EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
+DATA="/home/guolidong/stLFR/debug/stLFR_Assembler/scripts/LRIAGCA"
+BWA_DIR="/share/app/bwa-0.7.12"
 
 #
 # Detail settings 
 #
-
-EXEC_DIR="../src/main"
-DATA="./"
 BIN_SIZE=300
 TAIL_DEL=35
-SOAP_K=63
 CLUSTER=0.05
 SEARCH_DEPTH=300
 LEN_FACTOR=0.7
