pipeline script save

--- a/scripts/LRIAGCA/conf.ini
+++ b/scripts/LRIAGCA/conf.ini
@@ -1,36 +1,28 @@
-#
+###############################################################################
 # Project Settings.
 #
-
 PROJECT_NAME="pipetest"
-R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
-R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
 THREADS=8
 
+###############################################################################
+# Toos settings 
 #
-# SOAPdenovo settings 
-#   directory should at least contain :
-#                   1. xxx.contig
-#                   2. xxx.updated.edge
-#                   3. xxx.Arc
-#                   4. xxx.ContigIndex
-#
+EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
+DATA="./"
+BWA_DIR="/share/app/bwa-0.7.12"
 
+###############################################################################
+# Input data settings
+#
+R1="/home/guolidong/chr19/chr19_reads1.fq.clean.gz"
+R2="/home/guolidong/chr19/chr19_reads2.fq.clean.gz"
 SOAP_DIR="/home/guolidong/stLFR/new_chr19/chr19/standard_soap2_k48_09_03_11_35_24"
 SOAP_K=63
 PREFIX="chr19_soap2"
 
 
-#
-# Toos settings 
-#
-
-EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
-DATA="/home/guolidong/stLFR/debug/stLFR_Assembler/scripts/LRIAGCA"
-BWA_DIR="/share/app/bwa-0.7.12"
-
-#
-# Detail settings 
+###############################################################################
+# Control parameter settings 
 #
 BIN_SIZE=300
 TAIL_DEL=35
@@ -38,7 +30,4 @@ CLUSTER=0.05
 SEARCH_DEPTH=300
 LEN_FACTOR=0.7
 SIM_FACTOR=0.7
-
-
-
 
