--- a/scripts/LRIAGCA/conf.ini
+++ b/scripts/LRIAGCA/conf.ini
@@ -6,6 +6,9 @@ THREADS=8
 
 ###############################################################################
 # Toos settings 
+#   
+#   MAKE SURE ALL PATH ARE ABSOLUTELY PATH.
+#   DO NOT USE "../"  "~/" "./" !!!
 #
 EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
 DATA="./"
