--- a/scripts/LRIAGCA/conf.ini
+++ b/scripts/LRIAGCA/conf.ini
@@ -11,7 +11,7 @@ THREADS=8
 #   DO NOT USE "../"  "~/" "./" !!!
 #
 EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
-DATA="./"
+DATA="/home/guolidong/stLFR/debug/stLFR_Assembler/scripts/LRIAGCA"
 BWA_DIR="/share/app/bwa-0.7.12"
 
 ###############################################################################
@@ -27,6 +27,9 @@ PREFIX="chr19_soap2"
 ###############################################################################
 # Control parameter settings 
 #
+
+# please make sure that SEED_MIN >= BIN_SIZE + TAIL_DEL
+SEED_MIN=335
 BIN_SIZE=300
 TAIL_DEL=35
 CLUSTER=0.05
