Add seed_min to pipeline

--- a/scripts/ContigExtern/conf.ini
+++ b/scripts/ContigExtern/conf.ini
@@ -8,7 +8,7 @@ THREADS=8
 # Toos settings 
 #
 EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
-DATA="./"
+DATA="/home/guolidong/stLFR/debug/stLFR_Assembler/scripts/ContigExtern"
 BWA_DIR="/share/app/bwa-0.7.12"
 
 ###############################################################################
