--- a/scripts/MST/conf.ini
+++ b/scripts/MST/conf.ini
@@ -8,7 +8,7 @@ THREADS=8
 # Toos settings 
 #
 EXEC_DIR="/home/guolidong/stLFR/debug/stLFR_Assembler/src/main"
-DATA="./"
+DATA="/home/guolidong/stLFR/debug/stLFR_Assembler/scripts/MST"
 BWA_DIR="/share/app/bwa-0.7.12"
 
 ###############################################################################
@@ -23,10 +23,12 @@ SOAP_DIR="/home/guolidong/stLFR/new_chr19/chr19/standard_soap2_k48_09_03_11_35_2
 SOAP_K=63
 PREFIX="chr19_soap2"
 
-
 ###############################################################################
 # Control parameter settings 
 #
+
+# please make sure that SEED_MIN >= BIN_SIZE + TAIL_DEL
+SEED_MIN=3235
 BIN_SIZE=3200
 TAIL_DEL=35
 BIN_CLUSTER=0.05
